                                                         -*- coding: utf-8 -*-

Changes with Apache Traffic Server 3.1.0
  *) [TS-847] Bad timeout when using CONNECT method.

  *) [TS-826] TSHttpTxnErrorBodySet() can leak memory. Author: William
  Bardwell.

  *) [TS-840] Regression checks fail (again) due to faulty assert use.
   Author: Arno Toell.

  *) [TS-842] remove uninstall target from build system

  *) [TS-648] Use hwloc library when available. This can be disabled
   with --disable-hwloc.

  *) [TS-398] Autoscaling threads vs Hyper Threading. This requires
   support for hwloc as well.

  *) [TS-760] Cleanup mgmt types.

  *) [TS-359] Remove DIR_SEP and use slash directly.

  *) [TS-839] Build problems when specifying lmza location.

  *) [TS-828] Various memory leaks and uninitialized values. Author:
   William Bardwell.

  *) [TS-815] make sure that a missing yacc/bison|flex/lex is *fatal* when
   building with wccp. Author: Arno Toll.


Changes with Apache Traffic Server 3.0.0
  *) [TS-827] TSMimeHdrFieldValueStringInsert() can use freed memory to
  edit headers. Author: William Bardwell.

  *) [TS-825] negative caching caches responses that should never be
   cached: Author: William Bardwell.

  *) [TS-820] Restore log buffer size to previous defaults.

  *) [TS-818] Assertion/abort when starting TS with SOCKS proxy enabled.
   Author: Yakov Markovitch

  *) [TS-810] Typo in switch statement + slight improvement.

  *) [TS-809] ts.h broken when compiling C plugins.

  *) [TS-798] We add broken remap rules when we encounter parse errors of
   remap.config.


Changes with Apache Traffic Server 2.1.9
  *) [TS-805] HostDB wastes a lot of storage for round-robin entries,
   and the calculations of size are off.

  *) [TS-806] TS_ADDTO removes duplicates, so avoid this by using the
   -R option to libtool

  *) [TS-793] Improve print statements for ink_freelist debugging.

  *) [TS-679] The external API was changed to make it IPv6 compliant